# hexxagon

./: CMakeLists.txt  README.md  gen_resources.sh  sprites.aseprite
src/cli/: ansi.h  main.cpp  utils.cpp  utils.h
src/common/: board.cpp  board.h  byte_utils.h  files.cpp  files.h  hexmap.h  highscore_manager.cpp  highscore_manager.h  level_data.h  rng.h  sequencer.cpp  sequencer.h
src/gui/: button.cpp  button.h  context.h  game_loop.h  main.cpp  render.cpp  render.h  resources.cpp  resources.h  scene.cpp  scene.h  scene_game.cpp  scene_game.h  scene_gameover.cpp  scene_gameover.h  scene_input.cpp  scene_input.h  scene_mainmenu.cpp  scene_mainmenu.h  sprites.bmp.h  types.h
